[package]
name = "monitor_client_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11", features=["json"] }
serde = "1.0"
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
mungos = "0.2"